--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="row">
           <div class="col-sm-6">
             <h3>Imagem não responsiva</h3>
-            <img src="./img/uvas.png" class="img-rounded">
+            <img src="./img/uvas.png" class="img-rounded img-responsive">
         </div>  
 
     </div>
