--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
       </div><!--/container-->
     </nav><!--/nav-->
 
+    <div class="capa">
+      <div class="texto-capa">
+        <h1>Seja Bem-Vindo!</h1>
+        <a href="" style="margin: 4px" class="btn btn-default btn-lg">Veja nossa história</a>
+        <a href="" style="margin: 4px" class="btn btn-warning btn-lg">Saboreie nossos cafés</a>
+      </div>
+    </div>
+
     
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
