--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <div class="capa">
       <div class="texto-capa">
         <h1>Seja Bem-Vindo!</h1>
-        <a href="" style="margin: 4px" class="btn btn-default btn-lg">Veja nossa história</a>
-        <a href="" style="margin: 4px" class="btn btn-warning btn-lg">Saboreie nossos cafés</a>
+        <a href="" style="margin: 4px" class="btn btn-custom btn-amarelo btn-lg">Veja nossa história</a>
+        <a href="" style="margin: 4px" class="btn btn-custom btn-branco btn-lg">Saboreie nossos cafés</a>
       </div>
     </div>
 
