--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
           </button>
 
           <a href="index.html" class="navbar-brand">
-            <span class="img-logo">CafeGourmet</span>
+            <img class="img-logo" src="img/coffee-547490_1280.png">
+            <span class="logo">Cafe<br />Gourmet</span>
           </a>
 
         </div>
@@ -59,8 +60,8 @@
     <div class="capa">
       <div class="texto-capa">
         <h1>Seja Bem-Vindo!</h1>
-        <a href="" style="margin: 4px" class="btn btn-custom btn-amarelo btn-lg">Veja nossa história</a>
-        <a href="" style="margin: 4px" class="btn btn-custom btn-branco btn-lg">Saboreie nossos cafés</a>
+        <a href="" class="btn btn-custom btn-amarelo btn-lg">Veja nossa história</a>
+        <a href="" class="btn btn-custom btn-branco btn-lg">Saboreie nossos cafés</a>
       </div>
     </div>
 
