--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
           <a href="index.html" class="navbar-brand">
             <img class="img-logo" src="img/coffee-547490_1280.png">
-            <span class="logo">Cafe<br />Gourmet</span>
+            <span class="logo">Café<br />Gourmet</span>
           </a>
 
         </div>
@@ -45,11 +45,11 @@
         <!-- navbar -->
         <div class="collapse navbar-collapse" id="barra-navegacao">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="">Home</a></li>
-            <li><a href="">Cafés</a></li>
-            <li><a href="">História</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="cafes.html">Cafés</a></li>
+            <li><a href="historia.html">História</a></li>
             <li class="divisor" role="separator"></li>
-            <li><a href="">Contato</a></li>
+            <li><a href="contato.html">Contato</a></li>
 
           </ul>
         </div>
@@ -60,10 +60,78 @@
     <div class="capa">
       <div class="texto-capa">
         <h1>Seja Bem-Vindo!</h1>
-        <a href="" class="btn btn-custom btn-amarelo btn-lg">Veja nossa história</a>
-        <a href="" class="btn btn-custom btn-branco btn-lg">Saboreie nossos cafés</a>
+        <a href="historia.html" class="btn btn-custom btn-amarelo btn-lg">Veja nossa história</a>
+        <a href="cafes.html" class="btn btn-custom btn-branco btn-lg">Saboreie nossos cafés</a>
       </div>
     </div>
+
+     <!-- Conteúdos -->
+     <section id="servicos">
+      <div class="container">
+        <div class="row">
+
+          <!-- albuns -->
+          <div class="col-md-6">
+
+            <div class="row albuns">
+              <div class="">
+                <img src="img/tradicao.png" class="img-responsive ajuste-img">
+              </div>
+            </div>
+
+            <div class="row albuns">
+              <div class="">
+                <img src="img/sabor.png" class="img-responsive ajuste-img">
+              </div>
+            </div>
+
+          </div>
+
+          <!-- servicos -->
+          <div class="col-md-6">
+            <h2>Por que o Café Gourmet?</h2>
+
+            <h3>Tradição</h3>
+            <p>Nossos cafés são feitos da mesma maneira desde 1923, conservando o sabor maravilhoso desde a época das grandes safras de café.</p>
+
+            <h3>Sabor</h3>
+            <p>Nossos grãos são plantados, colhidos e processados de maneira artesanal, extraindo o máximo de sabor e nutrientes dele.</p>
+
+            <h3>Atendimento</h3>
+            <p>Garantimos um atendimento personalizado para que você se sinta parte dessa grande família.</p>
+
+          </div>
+        </div>
+      </div>
+    </section>
+  
+    
+    <!-- Rodapé -->
+    <footer id="rodape">
+      <div class="container">
+
+        <div class="col-md-2 espacamento">
+          <img class="img-logo" src="img/coffee-547490_1280.png">
+          <span class="logo">Café<br />Gourmet</span>
+        </div>
+
+        <div class="col-md-6 espacamento">
+          <p>Apresentação projeto assim assim assado</p>
+          <p>Faculdade blah</p>
+          <p>Turma tal</p>
+          <p>2018</p>
+        </div>
+
+        <div class="col-md-4 espacamento">
+          <ul class="nav">
+            <li class="rede-social"><a href=""><img src="img/facebook.png"></a></li>
+            <li class="rede-social"><a href=""><img src="img/twitter.png"></a></li>
+            <li class="rede-social"><a href=""><img src="img/instagram.png"></a></li>
+          </ul>
+        </div>
+      </div>
+
+    </footer>
 
     
 
