--- a/contato.html
+++ b/contato.html
@@ -70,29 +70,29 @@
 
             <div class="row cafe">
                 <div class="col-md-4">
-                    <img src="img/historia-pagina.png" class="img-responsive">
+                    <img src="img/atendimento.png" class="img-responsive">
                 </div>
                 <div class="col-md-2"></div>
                 <div class="col-md-6">
-                    <div class="row">
+                    <div class="atendimento row">
                         <h4>Nome 1</h4>
                         <p>Matrícula</p>
                         <p>E-mail</p>
                     </div>
 
-                    <div class=" row">
+                    <div class="atendimento row">
                         <h4>Nome 2</h4>
                         <p>Matrícula</p>
                         <p>E-mail</p>
                     </div>
 
-                    <div class="row ">
+                    <div class="atendimento row">
                         <h4>Nome 3</h4>
                         <p>Matrícula</p>
                         <p>E-mail</p>
                     </div>
 
-                    <div class="row ">
+                    <div class="atendimento row">
                         <h4>Nome 4</h4>
                         <p>Matrícula</p>
                         <p>E-mail</p>
