modal visao e missao

--- a/index.html
+++ b/index.html
@@ -60,8 +60,54 @@
     <div class="capa">
       <div class="texto-capa">
         <h1>Seja Bem-Vindo!</h1>
-        <a href="historia.html" class="btn btn-custom btn-amarelo btn-lg">Veja nossa história</a>
-        <a href="cafes.html" class="btn btn-custom btn-branco btn-lg">Saboreie nossos cafés</a>
+        <a class="btn btn-custom btn-amarelo btn-lg" data-toggle="modal" data-target="#visaoModal">VISÃO</a>
+        <a class="btn btn-custom btn-branco btn-lg" data-toggle="modal" data-target="#missaoModal">MISSÃO</a>
+      </div>
+    </div>
+
+    <!-- Modal Visão-->
+    <div class="modal fade" id="visaoModal" tabindex="-1" role="dialog" aria-labelledby="visaoModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="row">
+              <div class="col-md-10">
+                <h5 class="modal-title modalFonte" id="visaoModalLabel">Nossa visão</h5>
+              </div>
+              <div class="col-md-2">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="modal-body">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc luctus gravida laoreet. Nulla id turpis semper, pretium ligula in, sodales nunc. Nullam eget sem ullamcorper, vehicula mi sit amet, scelerisque orci. Praesent nec tristique purus. Donec nec convallis ligula, vel pharetra magna. Proin tristique leo sapien, ut volutpat urna iaculis sed. Nam vel sapien sodales, euismod metus vel, malesuada urna. Donec eu dui sed leo bibendum interdum nec vitae diam.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal Missão-->
+    <div class="modal fade" id="missaoModal" tabindex="-1" role="dialog" aria-labelledby="missaoModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="row">
+              <div class="col-md-10">
+                <h5 class="modal-title modalFonte" id="missaoModalLabel">Nossa visão</h5>
+              </div>
+              <div class="col-md-2">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                 <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="modal-body">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc luctus gravida laoreet. Nulla id turpis semper, pretium ligula in, sodales nunc. Nullam eget sem ullamcorper, vehicula mi sit amet, scelerisque orci. Praesent nec tristique purus. Donec nec convallis ligula, vel pharetra magna. Proin tristique leo sapien, ut volutpat urna iaculis sed. Nam vel sapien sodales, euismod metus vel, malesuada urna. Donec eu dui sed leo bibendum interdum nec vitae diam.</p>
+          </div>
+        </div>
       </div>
     </div>
 
