--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="modal-header">
             <div class="row">
               <div class="col-md-10">
-                <h5 class="modal-title modalFonte" id="missaoModalLabel">Nossa visão</h5>
+                <h5 class="modal-title modalFonte" id="missaoModalLabel">Nossa Missão</h5>
               </div>
               <div class="col-md-2">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
