refactor visao missao rodape

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">Home</a></li>
             <li><a href="cafes.html">Cafés</a></li>
-            <li><a href="historia.html">História</a></li>
+            <li><a href="historia.html">Sobre</a></li>
             <li class="divisor" role="separator"></li>
             <li><a href="contato.html">Contato</a></li>
 
@@ -60,7 +60,7 @@
     <div class="capa">
       <div class="texto-capa">
         <h1>Seja Bem-Vindo!</h1>
-        <a href="historia.html" class="btn btn-custom btn-amarelo btn-lg">Conheça nossa história</a>
+        <a href="historia.html" class="btn btn-custom btn-amarelo btn-lg">Conheça mais sobre nós</a>
         <a href="cafes.html" class="btn btn-custom btn-branco btn-lg">Saboreie nossos cafés</a>
       </div>
     </div>
@@ -108,29 +108,28 @@
     
     <!-- Rodapé -->
     <footer id="rodape">
-      <div class="container">
+        <div class="container">
 
-        <div class="col-md-2 espacamento">
-          <img class="img-logo" src="img/coffee-547490_1280.png">
-          <span class="logo">Café<br />Gourmet</span>
+        <div class="col-md-3    ">
+            <img class="img-logo" src="img/coffee-547490_1280.png">
+            <span class="logo">Café<br />Gourmet</span>
         </div>
 
-        <div class="col-md-6 espacamento">
-          <p>Apresentação projeto assim assim assado</p>
-          <p>Faculdade blah</p>
-          <p>Turma tal</p>
-          <p>2018</p>
+        <div class="col-md-5 espacamento">
+            <p>Apresentação projeto de Comunicação Organizacional</p>
+            <p>Processos gerências - Turma 05</p>
+            <p>Faculdade Senac</p>
+            <p>Endereço: Saul Brandalise, 306 - centro - Santa Catarina</p>
         </div>
 
-        <div class="col-md-4 espacamento">
-          <ul class="nav">
+        <div class="col-md-3">
+            <ul class="nav">
             <li class="rede-social"><a href=""><img src="img/facebook.png"></a></li>
             <li class="rede-social"><a href=""><img src="img/twitter.png"></a></li>
             <li class="rede-social"><a href=""><img src="img/instagram.png"></a></li>
-          </ul>
+            </ul>
         </div>
-      </div>
-
+        </div>
     </footer>
 
     
