--- a/historia.html
+++ b/historia.html
@@ -60,7 +60,7 @@
 
     <div class="capa">
         <div class="texto-capa">
-            <h1>Nossa história</h1>
+            <h1>Sobre nós...</h1>
         </div>
     </div>
 
