--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           </button>
 
           <a href="index.html" class="navbar-brand">
-            <img class="img-logo" src="img/coffee-547490_1280.png">
-            <span class="logo">Café<br />Gourmet</span>
+            <img class="img-logo" src="img/logo-completo.png">
+            <!-- <span class="logo">Café<br />Gourmet</span> -->
           </a>
 
         </div>
@@ -108,29 +108,26 @@
     
     <!-- Rodapé -->
     <footer id="rodape">
-        <div class="container">
+      <div class="container">
 
-        <div class="col-md-3    ">
-            <img class="img-logo" src="img/coffee-547490_1280.png">
-            <span class="logo">Café<br />Gourmet</span>
-        </div>
-
-        <div class="col-md-5 espacamento">
-            <p>Apresentação projeto de Comunicação Organizacional</p>
-            <p>Processos gerências - Turma 05</p>
-            <p>Faculdade Senac</p>
-            <p>Endereço: Saul Brandalise, 306 - centro - Santa Catarina</p>
-        </div>
-
-        <div class="col-md-3">
-            <ul class="nav">
-            <li class="rede-social"><a href=""><img src="img/facebook.png"></a></li>
-            <li class="rede-social"><a href=""><img src="img/twitter.png"></a></li>
-            <li class="rede-social"><a href=""><img src="img/instagram.png"></a></li>
-            </ul>
-        </div>
-        </div>
-    </footer>
+          <div class="row col-md-3    ">
+              <img class="img-logo" src="img/logo-completo.png">
+          </div>
+  
+          <div class="row col-md-6 espacamento">
+              <p>Apresentação projeto de Comunicação Organizacional</p>
+              <p>Processos gerências - Turma 05</p>
+              <p>Faculdade Senac</p>
+              <p>Endereço: Saul Brandalise, 306 - centro - Santa Catarina</p>
+          </div>
+  
+          <div class=" row col-md-3">
+            <a href="https://www.facebook.com/cafegourmet" target="_blank"><img class="rede-social" src="img/facebook.png"></a>
+            <a href="https://twitter.com/cafegourmet" target="_blank"><img class="rede-social" src="img/twitter.png"></a>
+            <a href="https://www.instagram.com/cafegourmet" target="_blank"><img class="rede-social" src="img/instagram.png"></a>
+          </div>
+      </div>
+  </footer>
 
     
 
