professor - ajuste e nomes

--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="jquery-2.2.1.js"></script>
 
     <title>CaféGourmet - Contato</title>
     <link rel="icon" href="img/favicon.ico">
@@ -81,31 +80,31 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-6">
                     <div class="atendimento row">
-                        <h4>Nome 1</h4>
+                        <h4>Édina Do Prado</h4>
                         <p>Matrícula</p>
                         <p>E-mail</p>
                     </div>
 
                     <div class="atendimento row">
-                        <h4>Nome 2</h4>
+                        <h4>Jefferson Berté</h4>
                         <p>Matrícula</p>
                         <p>E-mail</p>
                     </div>
 
                     <div class="atendimento row">
-                        <h4>Nome 3</h4>
+                        <h4>Larissa Pilke</h4>
                         <p>Matrícula</p>
                         <p>E-mail</p>
                     </div>
 
                     <div class="atendimento row">
-                        <h4>Nome 4</h4>
+                        <h4>Millene Tomazi</h4>
                         <p>Matrícula</p>
                         <p>E-mail</p>
                     </div>
 
                     <div class="atendimento row">
-                        <h4>Nome 5</h4>
+                        <h4>Rogério</h4>
                         <p>Matrícula</p>
                         <p>E-mail</p>
                     </div>
@@ -119,7 +118,7 @@
             <div class="container">
     
                 <div class="row col-md-3    ">
-                    <img class="img-logo" src="img/logo-completo.png">
+                    <img class="img-logo" src="img/logo-completo.png" ondblclick="$('#professor').hide();">
                 </div>
         
                 <div class="row col-md-6 espacamento">
