--- a/contato2.html
+++ b/contato2.html
@@ -80,33 +80,28 @@
                 <div class="col-md-2"></div>
                 <div class="col-md-6">
                     <div class="atendimento row">
-                        <h4>Édina Do Prado</h4>
-                        <p>Matrícula</p>
+                        <h4>Nome: Édina Do Prado</h4>
+                        <p>E-mail:</p>
+                    </div>
+
+                    <div class="atendimento row">
+                        <h4>Nome: Jefferson Berté</h4>
                         <p>E-mail</p>
                     </div>
 
                     <div class="atendimento row">
-                        <h4>Jefferson Berté</h4>
-                        <p>Matrícula</p>
-                        <p>E-mail</p>
+                        <h4>Nome: Larissa Pilke</h4>
+                        <p>E-mail:</p>
                     </div>
 
                     <div class="atendimento row">
-                        <h4>Larissa Pilke</h4>
-                        <p>Matrícula</p>
-                        <p>E-mail</p>
+                        <h4>Nome: Millene Tomazi</h4>
+                        <p>E-mail:</p>
                     </div>
 
                     <div class="atendimento row">
-                        <h4>Millene Tomazi</h4>
-                        <p>Matrícula</p>
-                        <p>E-mail</p>
-                    </div>
-
-                    <div class="atendimento row">
-                        <h4>Rogério</h4>
-                        <p>Matrícula</p>
-                        <p>E-mail</p>
+                        <h4>Nome: Rogério</h4>
+                        <p>E-mail:</p>
                     </div>
                 </div>
             </div>
