--- a/index.html
+++ b/index.html
@@ -73,15 +73,16 @@
           <!-- albuns -->
           <div class="col-md-6">
 
-            <div class="row albuns">
-              <div class="">
-                <img src="img/tradicao.png" class="img-responsive ajuste-img">
+            <div class="row albuns ajuste-img">
+              <div class="embed-responsive embed-responsive-16by9">
+                <!-- <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oA1HrapCA64" allowfullscreen></iframe> -->
+                <img src="img/tradicao.png" class="img-responsive">
               </div>
             </div>
 
-            <div class="row albuns">
-              <div class="">
-                <img src="img/sabor.png" class="img-responsive ajuste-img">
+            <div class="row albuns ajuste-img">
+              <div>
+                <img src="img/sabor.png" class="img-responsive">
               </div>
             </div>
 
