Ajuste tamanho - mobile

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row">
 
           <!-- albuns -->
-          <div class="col-md-6">
+          <div class="col-sm-6">
 
             <div class="row albuns ajuste-img">
               <div class="embed-responsive embed-responsive-16by9">
@@ -81,15 +81,13 @@
             </div>
 
             <div class="row albuns ajuste-img">
-              <div>
-                <img src="img/sabor.png" class="img-responsive">
-              </div>
+              <img src="img/sabor.png" class="img-responsive">
             </div>
 
           </div>
 
           <!-- servicos -->
-          <div class="col-md-6">
+          <div class="col-sm-6">
             <h2>Por que o Café Gourmet?</h2>
 
             <h3>Tradição</h3>
@@ -110,16 +108,11 @@
     <!-- Rodapé -->
     <footer id="rodape">
       <div class="container">
-
-          <div class="row col-md-3    ">
-              <img class="img-logo" src="img/logo-completo.png">
-          </div>
-  
-          <div class=" row col-md-3">
-            <a href="https://www.facebook.com/cafegourmet" target="_blank"><img class="rede-social" src="img/facebook.png"></a>
-            <a href="https://twitter.com/cafegourmet" target="_blank"><img class="rede-social" src="img/twitter.png"></a>
-            <a href="https://www.instagram.com/cafegourmet" target="_blank"><img class="rede-social" src="img/instagram.png"></a>
-          </div>
+        <img class="img-logo" src="img/logo-completo.png">
+        
+        <a href="https://www.facebook.com/cafegourmet" target="_blank"><img class="rede-social" src="img/facebook.png"></a>
+        <a href="https://twitter.com/cafegourmet" target="_blank"><img class="rede-social" src="img/twitter.png"></a>
+        <a href="https://www.instagram.com/cafegourmet" target="_blank"><img class="rede-social" src="img/instagram.png"></a>
       </div>
   </footer>
 
